[XForms] bug 396179 - cannot insert elements from xforms namespace using origin attribute on insert element, r=me, Olli.Pettay, patch by Merle Sterling